[gd_scene load_steps=9 format=3 uid="uid://dqqm4htlk2dxs"]

[ext_resource type="Theme" uid="uid://dubk1ftmdlsay" path="res://themes/green_gal_main_menu_theme.tres" id="1_mhxpy"]
[ext_resource type="Script" path="res://scenes/task_tracking_settings.gd" id="2_50fxw"]
[ext_resource type="Theme" uid="uid://dsurd46r2nccp" path="res://themes/green_gal_large_title_theme.tres" id="2_g1yur"]
[ext_resource type="StyleBox" uid="uid://drr0a8wi67h56" path="res://themes/theme_parts/popup_panel_3_style_box_flat.tres" id="4_ok60o"]
[ext_resource type="ButtonGroup" uid="uid://rtfa2yhtpxlw" path="res://data/setting_parts/task_new_checkbox_options_button_group.tres" id="5_pw0kc"]
[ext_resource type="StyleBox" uid="uid://kshd0em2p28" path="res://themes/theme_parts/transpanency2_style_box_flat.tres" id="6_i4frn"]
[ext_resource type="StyleBox" uid="uid://5gbky82e7ys5" path="res://themes/theme_parts/popup_panel_2_style_box_flat.tres" id="7_atkjp"]
[ext_resource type="PackedScene" uid="uid://b2gi1xlrdmw1p" path="res://gui/data_manager/data_manager.tscn" id="8_ru03e"]

[node name="TaskTrackingSettings" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_mhxpy")
script = ExtResource("2_50fxw")

[node name="Center" type="CenterContainer" parent="."]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="Center"]
layout_mode = 2
alignment = 1

[node name="TaskSettingsTitle" type="Label" parent="Center/VBox"]
layout_mode = 2
theme = ExtResource("2_g1yur")
theme_override_font_sizes/font_size = 80
text = "Task Settings"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="Center/VBox"]
layout_mode = 2
theme_override_constants/h_separation = 12
theme_override_constants/v_separation = 12
columns = 2

[node name="DefaultDataPanelContainer" type="PanelContainer" parent="Center/VBox/GridContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("4_ok60o")

[node name="DefaultDataVBox" type="VBoxContainer" parent="Center/VBox/GridContainer/DefaultDataPanelContainer"]
layout_mode = 2

[node name="DefaultDataLabel" type="Label" parent="Center/VBox/GridContainer/DefaultDataPanelContainer/DefaultDataVBox"]
layout_mode = 2
text = "Default Data"
horizontal_alignment = 1

[node name="SetDefaultDataButton" type="Button" parent="Center/VBox/GridContainer/DefaultDataPanelContainer/DefaultDataVBox"]
layout_mode = 2
text = "Set Current Data as Default Data"

[node name="DefaultDataDisplayButton" type="Button" parent="Center/VBox/GridContainer/DefaultDataPanelContainer/DefaultDataVBox"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
disabled = true
toggle_mode = true
text = "Data Not Set"

[node name="AutoLoadCheckButton" type="CheckButton" parent="Center/VBox/GridContainer/DefaultDataPanelContainer/DefaultDataVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Auto Load Default Data (Off)"

[node name="NewCheckboxOptionsPanelContainer" type="PanelContainer" parent="Center/VBox/GridContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("4_ok60o")

[node name="NewCheckboxOptionsVBox" type="VBoxContainer" parent="Center/VBox/GridContainer/NewCheckboxOptionsPanelContainer"]
layout_mode = 2

[node name="NewCheckboxOptionsLabel" type="Label" parent="Center/VBox/GridContainer/NewCheckboxOptionsPanelContainer/NewCheckboxOptionsVBox"]
layout_mode = 2
text = "New Checkbox Options"
horizontal_alignment = 1

[node name="HBox" type="HBoxContainer" parent="Center/VBox/GridContainer/NewCheckboxOptionsPanelContainer/NewCheckboxOptionsVBox"]
layout_mode = 2
size_flags_horizontal = 4

[node name="SetActiveButton" type="Button" parent="Center/VBox/GridContainer/NewCheckboxOptionsPanelContainer/NewCheckboxOptionsVBox/HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
toggle_mode = true
button_group = ExtResource("5_pw0kc")
text = "Set to Active"

[node name="SetExpiredButton" type="Button" parent="Center/VBox/GridContainer/NewCheckboxOptionsPanelContainer/NewCheckboxOptionsVBox/HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
toggle_mode = true
button_group = ExtResource("5_pw0kc")
text = "Set to Expired"

[node name="SetAssignedButton" type="Button" parent="Center/VBox/GridContainer/NewCheckboxOptionsPanelContainer/NewCheckboxOptionsVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
toggle_mode = true
button_group = ExtResource("5_pw0kc")
text = "Set Active & Assigned Profile"

[node name="DeletionPanelContainer" type="PanelContainer" parent="Center/VBox/GridContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("4_ok60o")

[node name="DeletionVBox" type="VBoxContainer" parent="Center/VBox/GridContainer/DeletionPanelContainer"]
layout_mode = 2

[node name="DeletionLabel" type="Label" parent="Center/VBox/GridContainer/DeletionPanelContainer/DeletionVBox"]
layout_mode = 2
text = "Profile and Data Deletion"
horizontal_alignment = 1

[node name="DeletionSafetyCheckButton" type="CheckButton" parent="Center/VBox/GridContainer/DeletionPanelContainer/DeletionVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Danger Buttons Disarmed"

[node name="RemoveProfileButton" type="Button" parent="Center/VBox/GridContainer/DeletionPanelContainer/DeletionVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
disabled = true
text = "Remove Profile from User List"

[node name="PurgeProfileDataButton" type="Button" parent="Center/VBox/GridContainer/DeletionPanelContainer/DeletionVBox"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Purge Profile Data from Task Sheet"

[node name="DeleteTaskSheetButton" type="Button" parent="Center/VBox/GridContainer/DeletionPanelContainer/DeletionVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
disabled = true
text = "Delete Task Sheet Data"

[node name="DefaultDataPanelContainer4" type="PanelContainer" parent="Center/VBox/GridContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("4_ok60o")

[node name="DefaultDataVBox" type="VBoxContainer" parent="Center/VBox/GridContainer/DefaultDataPanelContainer4"]
layout_mode = 2

[node name="DeletionLabel" type="Label" parent="Center/VBox/GridContainer/DefaultDataPanelContainer4/DefaultDataVBox"]
layout_mode = 2
text = "Other Options"
horizontal_alignment = 1

[node name="RegenProfilesButton" type="Button" parent="Center/VBox/GridContainer/DefaultDataPanelContainer4/DefaultDataVBox"]
layout_mode = 2
size_flags_horizontal = 4
text = "Regen Profiles"

[node name="HBoxContainer" type="HBoxContainer" parent="Center/VBox"]
layout_mode = 2
theme_override_constants/separation = 43
alignment = 1

[node name="ResetDefaultSettingsButton" type="Button" parent="Center/VBox/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Reset Default Settings"

[node name="MenuBackButton" type="Button" parent="Center/VBox/HBoxContainer"]
layout_mode = 2
text = "to Task Menu"

[node name="SheetsBackButton" type="Button" parent="Center/VBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "to Task Sheets"

[node name="DeletionBackgroundPanelContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_styles/panel = ExtResource("6_i4frn")

[node name="DeletionCenterContainer" type="CenterContainer" parent="DeletionBackgroundPanelContainer"]
layout_mode = 2

[node name="DeletionPanelContainer" type="PanelContainer" parent="DeletionBackgroundPanelContainer/DeletionCenterContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("7_atkjp")

[node name="DeletionVBox" type="VBoxContainer" parent="DeletionBackgroundPanelContainer/DeletionCenterContainer/DeletionPanelContainer"]
layout_mode = 2

[node name="DeletionLabel" type="Label" parent="DeletionBackgroundPanelContainer/DeletionCenterContainer/DeletionPanelContainer/DeletionVBox"]
layout_mode = 2
text = "Delete"

[node name="DeletionHBox" type="HBoxContainer" parent="DeletionBackgroundPanelContainer/DeletionCenterContainer/DeletionPanelContainer/DeletionVBox"]
unique_name_in_owner = true
layout_mode = 2

[node name="DeletionBackButton" type="Button" parent="DeletionBackgroundPanelContainer/DeletionCenterContainer/DeletionPanelContainer/DeletionVBox"]
layout_mode = 2
text = "Back"

[node name="DataManager" parent="." instance=ExtResource("8_ru03e")]
visible = false
layout_mode = 2

[connection signal="pressed" from="Center/VBox/GridContainer/DefaultDataPanelContainer/DefaultDataVBox/SetDefaultDataButton" to="." method="_on_set_default_data_button_pressed"]
[connection signal="toggled" from="Center/VBox/GridContainer/DefaultDataPanelContainer/DefaultDataVBox/AutoLoadCheckButton" to="." method="_on_auto_load_check_button_toggled"]
[connection signal="toggled" from="Center/VBox/GridContainer/DeletionPanelContainer/DeletionVBox/DeletionSafetyCheckButton" to="." method="_on_deletion_safety_check_button_toggled"]
[connection signal="pressed" from="Center/VBox/GridContainer/DeletionPanelContainer/DeletionVBox/RemoveProfileButton" to="." method="_on_remove_profile_button_pressed"]
[connection signal="pressed" from="Center/VBox/GridContainer/DeletionPanelContainer/DeletionVBox/PurgeProfileDataButton" to="." method="_on_purge_profile_data_button_pressed"]
[connection signal="pressed" from="Center/VBox/GridContainer/DeletionPanelContainer/DeletionVBox/DeleteTaskSheetButton" to="." method="_on_delete_task_sheet_button_pressed"]
[connection signal="pressed" from="Center/VBox/GridContainer/DefaultDataPanelContainer4/DefaultDataVBox/RegenProfilesButton" to="." method="_on_regen_profiles_button_pressed"]
[connection signal="pressed" from="Center/VBox/HBoxContainer/ResetDefaultSettingsButton" to="." method="_on_reset_default_settings_button_pressed"]
[connection signal="pressed" from="Center/VBox/HBoxContainer/MenuBackButton" to="." method="_on_menu_back_button_pressed"]
[connection signal="pressed" from="Center/VBox/HBoxContainer/SheetsBackButton" to="." method="_on_sheets_back_button_pressed"]
[connection signal="pressed" from="DeletionBackgroundPanelContainer/DeletionCenterContainer/DeletionPanelContainer/DeletionVBox/DeletionBackButton" to="." method="_on_deletion_back_button_pressed"]
